--- a/style.css
+++ b/style.css
@@ -1,98 +1,128 @@
 /* style.css */
-/**/
-/* HEADER */
-/**/
-header {
-    background-color: #7FFFD4;
-    padding: 20px;
-}
-figure {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-img {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    vertical-align:bottom;
-}
-figcaption {
-    font-size: 78px;
-    margin-top: 50px;
-    padding-left: 50px;
-    font-weight: 900;
-}
-nav {
-    font-size: 24px;
-    text-align: center;
-}
-a {
-    text-decoration: none;
-    display: inline-block;
-    margin-inline: 25px;
-    color: #000;
-}
-/**/
-/* MAIN */
-/**/
-main {
-    background-color: #7FFFD4;
-}
-/**/
-/* FOOTER */
-/**/
-footer {
-    background-color: #7FFFD4;
-    text-align: center;
-    padding: 25px;
-}
-/**/
-/* HOME */
-/**/
-section {
-    min-height: 500px;
+
+/* Style global */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
 }
 
-section.home {
+body {
+    background-color: #f4f4f9;
+    color: #333;
+    line-height: 1.6;
+}
+
+header {
+    background-color: #333;
+    color: white;
+    padding: 20px;
     text-align: center;
 }
-/**/
-/* RESEARCH */
-/**/
-section.research {
-    text-align: center;
+
+/* Style de l'avatar */
+header figure {
+    display: inline-block;
+    margin: 0;
 }
-/**/
-/* CV */
-/**/
-section.cv {
-    text-align: center;
+
+header img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 3px solid white;
 }
-/**/
-/* PROJECT */
-/**/
-section.project {
-    text-align: center;
-}
-/**/
-/* CONTACT */
-/**/
-section.contact {
-    text-align: center;
-}
-form {
-    padding: 50px;
-}
-input {
-    margin: 10px 0px 10px 25px;
-}
-textarea {
-    margin-left: 25px;
+
+header figcaption {
     margin-top: 10px;
+    font-size: 1.2em;
+    font-weight: bold;
 }
-.center {
-    margin: 25px 0px 0px 75px;
-    
+
+/* Navigation */
+nav {
+    margin-top: 20px;
+}
+
+nav a {
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.1em;
+    transition: background-color 0.3s;
+}
+
+nav a:hover {
+    background-color: #555;
+    border-radius: 5px;
+}
+
+/* Main section */
+main {
+    margin: 20px auto;
+    padding: 20px;
+    max-width: 800px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+main h1 {
+    margin-bottom: 20px;
+    font-size: 2em;
+    text-align: center;
+}
+
+main ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+main ul /*li*/ {
+    background-color: #f8f8f8;
+    margin-bottom: 10px;
+    padding: 15px;
+    border-left: 5px solid #333;
+    transition: background-color 0.3s;
+}
+
+main ul li:hover {
+    background-color: #f1f1f1;
+}
+
+/* Footer */
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+footer h6 {
+    font-size: 0.9em;
+}
+
+/* Media queries */
+@media (max-width: 600px) {
+    header img {
+        width: 80px;
+        height: 80px;
+    }
+
+    nav a {
+        padding: 8px 15px;
+        font-size: 1em;
+    }
+
+    main {
+        padding: 15px;
+    }
+
+    main ul li {
+        font-size: 0.9em;
+    }
 }
