--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ nav a:hover {
 main {
     margin: 20px auto;
     padding: 20px;
+    min-height: 100vh;
     max-width: 800px;
     background-color: white;
     border-radius: 10px;
