--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ main {
     margin: 20px auto;
     padding: 20px;
     max-width: 800px;
+    min-height: 650px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
